# blackhole-rt

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  flare_sequence.py  kerr-image.c  make_video.sh  render_sequence.py  scene.txt
demo/: flare_output.exr  output.exr
flaresim/: CMakeLists.txt  README.md  flaresim.conf
flaresim/lenses/: arri-zeiss-master-prime-t1.3-50mm.lens  canon-ef-200-400-f4.lens  convert_ob.py  convert_p2p.py  cooketriplet.lens  doublegauss.lens  test.lens
flaresim/src/: fresnel.h  ghost.cpp  ghost.h  gpu_ghosts.cu  gpu_ghosts.h  lens.cpp  lens.h  main.cpp  stb_impl.cpp  trace.cpp  trace.h  vec3.h
gpu/: gpu_render.cu  gpu_render.h  metal_render.h  metal_render.metal  metal_render.mm
inc/: blackhole.h  common.h  disk.h  physics.h  ray.h  scene.h  sky.h  types.h  vec_math.h
slurm/: README.md  add_node.sh  cluster_status.sh  collect_frames.sh  render_frame.sbatch  setup_node.sh  slurm.conf.template  submit_render.sh
src/: blackhole.cpp  disk.cpp  main.cpp  ray.cpp  scene.cpp  sky.cpp
tools/: CMakeLists.txt  README.md  bloom.cpp  grade.cpp
tools/filmgrain/: CMakeLists.txt  filmgrain.cpp
tools/flaretest/: CMakeLists.txt  flaretest.cpp
